# shrinkage_full_tests

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_adjoint_test.sh  run_batch_demo.sh  run_cd_training_test.sh  run_forward_training_test.sh  run_tan_tanadj_test.sh  srk_forward.cuh
adjoint/: main_adjoint.cu  srk_adjoint.cuh
notebooks/: plot_adjoints.ipynb  plot_batch_demo.ipynb  plot_cd_training.ipynb  plot_compare_demo.ipynb
tan_tanadj/: main_tan_tanadj.cu  srk_tangent.cuh  srk_tangent_adjoint.cuh
training/: main_batch_demo.cu  main_cd_training.cu  main_compare.cu  main_forward_training.cu  srk_cudnn_forward.cuh  srk_training_forward.cuh
